packages/fb_connector/lib/src/ffi/fb_bindings.dart


  late final _isc_request_infoPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_req_handle>,
              ffi.Int16,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_request_info');
  late final _isc_request_info = _isc_request_infoPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_req_handle>, int,
          int, ffi.Pointer<ISC_SCHAR>, int, ffi.Pointer<ISC_SCHAR>)>();

  int isc_seek_blob(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_blob_handle> arg1,
    int arg2,
    int arg3,
    ffi.Pointer<ISC_LONG> arg4,
  ) {
    return _isc_seek_blob(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
    );
  }

  late final _isc_seek_blobPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_blob_handle>,
              ffi.Int16,
              ISC_LONG,
              ffi.Pointer<ISC_LONG>)>>('isc_seek_blob');
  late final _isc_seek_blob = _isc_seek_blobPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_blob_handle>, int,
          int, ffi.Pointer<ISC_LONG>)>();

  int isc_send(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_req_handle> arg1,
    int arg2,
    int arg3,
    ffi.Pointer<ffi.Void> arg4,
    int arg5,
  ) {
    return _isc_send(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
    );
  }

  late final _isc_sendPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_req_handle>,
              ffi.Int16,
              ffi.Int16,
              ffi.Pointer<ffi.Void>,
              ffi.Int16)>>('isc_send');
  late final _isc_send = _isc_sendPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_req_handle>, int,
          int, ffi.Pointer<ffi.Void>, int)>();

  int isc_start_and_send(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_req_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    int arg3,
    int arg4,
    ffi.Pointer<ffi.Void> arg5,
    int arg6,
  ) {
    return _isc_start_and_send(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
    );
  }

  late final _isc_start_and_sendPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_req_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Int16,
              ffi.Int16,
              ffi.Pointer<ffi.Void>,
              ffi.Int16)>>('isc_start_and_send');
  late final _isc_start_and_send = _isc_start_and_sendPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_req_handle>,
          ffi.Pointer<isc_tr_handle>, int, int, ffi.Pointer<ffi.Void>, int)>();

  int isc_start_request(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_req_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    int arg3,
  ) {
    return _isc_start_request(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _isc_start_requestPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_req_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Int16)>>('isc_start_request');
  late final _isc_start_request = _isc_start_requestPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_req_handle>,
          ffi.Pointer<isc_tr_handle>, int)>();

  int isc_unwind_request(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
    int arg2,
  ) {
    return _isc_unwind_request(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _isc_unwind_requestPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>, ffi.Int16)>>('isc_unwind_request');
  late final _isc_unwind_request = _isc_unwind_requestPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_tr_handle>, int)>();

  int isc_wait_for_event(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    int arg2,
    ffi.Pointer<ISC_UCHAR> arg3,
    ffi.Pointer<ISC_UCHAR> arg4,
  ) {
    return _isc_wait_for_event(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
    );
  }

  late final _isc_wait_for_eventPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Int16,
              ffi.Pointer<ISC_UCHAR>,
              ffi.Pointer<ISC_UCHAR>)>>('isc_wait_for_event');
  late final _isc_wait_for_event = _isc_wait_for_eventPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_db_handle>, int,
          ffi.Pointer<ISC_UCHAR>, ffi.Pointer<ISC_UCHAR>)>();

  /// /
  int isc_close(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<ISC_SCHAR> arg1,
  ) {
    return _isc_close(
      arg0,
      arg1,
    );
  }

  late final _isc_closePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>)>>('isc_close');
  late final _isc_close = _isc_closePtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>)>();

  int isc_declare(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<ISC_SCHAR> arg1,
    ffi.Pointer<ISC_SCHAR> arg2,
  ) {
    return _isc_declare(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _isc_declarePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>,
              ffi.Pointer<ISC_SCHAR>)>>('isc_declare');
  late final _isc_declare = _isc_declarePtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>,
          ffi.Pointer<ISC_SCHAR>)>();

  int isc_describe(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<ISC_SCHAR> arg1,
    ffi.Pointer<XSQLDA> arg2,
  ) {
    return _isc_describe(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _isc_describePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>,
              ffi.Pointer<XSQLDA>)>>('isc_describe');
  late final _isc_describe = _isc_describePtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>,
          ffi.Pointer<XSQLDA>)>();

  int isc_describe_bind(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<ISC_SCHAR> arg1,
    ffi.Pointer<XSQLDA> arg2,
  ) {
    return _isc_describe_bind(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _isc_describe_bindPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>,
              ffi.Pointer<XSQLDA>)>>('isc_describe_bind');
  late final _isc_describe_bind = _isc_describe_bindPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>,
          ffi.Pointer<XSQLDA>)>();

  int isc_execute(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
    ffi.Pointer<ISC_SCHAR> arg2,
    ffi.Pointer<XSQLDA> arg3,
  ) {
    return _isc_execute(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _isc_executePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Pointer<XSQLDA>)>>('isc_execute');
  late final _isc_execute = _isc_executePtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<ISC_SCHAR>, ffi.Pointer<XSQLDA>)>();

  int isc_execute_immediate(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    ffi.Pointer<ffi.Int16> arg3,
    ffi.Pointer<ISC_SCHAR> arg4,
  ) {
    return _isc_execute_immediate(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
    );
  }

  late final _isc_execute_immediatePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<ffi.Int16>,
              ffi.Pointer<ISC_SCHAR>)>>('isc_execute_immediate');
  late final _isc_execute_immediate = _isc_execute_immediatePtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_db_handle>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<ffi.Int16>,
          ffi.Pointer<ISC_SCHAR>)>();

  int isc_fetch(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<ISC_SCHAR> arg1,
    ffi.Pointer<XSQLDA> arg2,
  ) {
    return _isc_fetch(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _isc_fetchPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>,
              ffi.Pointer<XSQLDA>)>>('isc_fetch');
  late final _isc_fetch = _isc_fetchPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>,
          ffi.Pointer<XSQLDA>)>();

  int isc_open(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
    ffi.Pointer<ISC_SCHAR> arg2,
    ffi.Pointer<XSQLDA> arg3,
  ) {
    return _isc_open(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _isc_openPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Pointer<XSQLDA>)>>('isc_open');
  late final _isc_open = _isc_openPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<ISC_SCHAR>, ffi.Pointer<XSQLDA>)>();

  int isc_prepare(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    ffi.Pointer<ISC_SCHAR> arg3,
    ffi.Pointer<ffi.Int16> arg4,
    ffi.Pointer<ISC_SCHAR> arg5,
    ffi.Pointer<XSQLDA> arg6,
  ) {
    return _isc_prepare(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
    );
  }

  late final _isc_preparePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Pointer<ffi.Int16>,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Pointer<XSQLDA>)>>('isc_prepare');
  late final _isc_prepare = _isc_preparePtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_db_handle>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<ISC_SCHAR>,
          ffi.Pointer<ffi.Int16>,
          ffi.Pointer<ISC_SCHAR>,
          ffi.Pointer<XSQLDA>)>();

  /// /
  int isc_dsql_execute_m(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
    ffi.Pointer<isc_stmt_handle> arg2,
    int arg3,
    ffi.Pointer<ISC_SCHAR> arg4,
    int arg5,
    int arg6,
    ffi.Pointer<ISC_SCHAR> arg7,
  ) {
    return _isc_dsql_execute_m(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
      arg7,
    );
  }
